Added Login and redirect to admin-panel

--- a/web_client/templates/index.html
+++ b/web_client/templates/index.html
@@ -233,6 +233,9 @@ blockquote {
     </script>
 </head>
 <body>
+<form action="http://localhost:5050/" method="get">
+    <button type="submit">Перейти для редактирования</button>
+</form>
     <h1>Заметки</h1>
     <div id="notes"></div>
 </body>
