Collapsed frontedns + some fixes

--- a/useless_client/templates/blog.html
+++ b/useless_client/templates/blog.html
@@ -233,7 +233,7 @@ blockquote {
     </script>
 </head>
 <body>
-<form action="http://localhost:5050/" method="get">
+<form action="admin" method="get">
     <button type="submit">Перейти для редактирования</button>
 </form>
     <h1>Заметки</h1>
